--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -263,6 +263,8 @@ if( USE_INTERNAL_SDL )
   set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/Debug/${GAMELIB_OUTPUT_DIR}" )
   set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL "${CMAKE_BINARY_DIR}/MinSizeRel/${GAMELIB_OUTPUT_DIR}" )
   set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_BINARY_DIR}/RelWithDebInfo/${GAMELIB_OUTPUT_DIR}" )
+  set( DIRECTX OFF CACHE BOOL "Build SDL with DirectX support" )
+  set( SDL_STATIC OFF CACHE BOOL "Build SDL static library" )
   add_subdirectory( ${SDL2_DIR} ${OBJ_DIR}/libsdl2 )
   set( SDL2_LIBRARIES SDL2 SDL2main CACHE STRING "SDL library" FORCE )
   set( SDL2_INCLUDE_DIRS ${SDL2_DIR}/include CACHE STRING "SDL include directory" FORCE )
