--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Build-Depends: debhelper (>= 8.0.0), cmake,
 	libogg-dev,
 	libopenal-dev,
 	libpng-dev | libpng12-dev,
-	libsdl1.2-dev,
+	libsdl2-dev | libsdl1.2-dev,
 	libspeexdsp-dev,
 	libtheora-dev,
 	libvorbis-dev,
