--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -286,6 +286,7 @@ if( USE_INTERNAL_SDL )
 	  add_subdirectory( ${SDL_DIR} ${OBJ_DIR}/libsdl )
 	  set( SDL_LIBRARY SDL1.2 SDL1.2main CACHE STRING "SDL library" FORCE )
 	  set( SDL_INCLUDE_DIR ${SDL_DIR}/include CACHE STRING "SDL include directory" FORCE )
+	  set( SDL_FOUND "1" CACHE INTERNAL "" )
   endif()
 endif()
 
@@ -1359,16 +1360,27 @@ elseif( UNIX )
   endif()
 endif()
 
-
 macro( find_and_use_SDL TARGET )
-  if ( USE_SDL2 )
-    find_package( SDL2 REQUIRED )
+  if( USE_SDL2 )
+    if( NOT SDL_FOUND AND NOT SDL2_FOUND AND NOT USE_INTERNAL_SDL )
+      find_package( SDL2 )
+    endif()
     include_directories( ${SDL2_INCLUDE_DIRS} )
     target_link_libraries( ${TARGET} ${SDL2_LIBRARIES} )
-  else()
-    find_package( SDL REQUIRED )
+  endif()
+  # Fall back on 1.2
+  if( NOT USE_SDL2 OR NOT SDL2_FOUND )
+    if( NOT SDL_FOUND AND NOT SDL2_FOUND AND NOT USE_INTERNAL_SDL )
+      find_package( SDL REQUIRED )
+    endif()
     include_directories( ${SDL_INCLUDE_DIR} )
     target_link_libraries( ${TARGET} ${SDL_LIBRARY} )
+  endif()
+  if( SDL2_FOUND OR SDL_LIBRARY )
+    set( SDL_FOUND "1" CACHE INTERNAL "" )
+  else()
+    # shouldn't get here – should fail above if 1.2 isn't found
+    message( FATAL_ERROR "Neither SDL 1.2 nor SDL 2 were found" )
   endif()
 endmacro()
 
