Fix up external SDL fallback.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1366,7 +1366,7 @@ endif()
 
 macro( find_and_use_SDL TARGET )
   if( USE_SDL2 )
-    if( NOT SDL_FOUND AND NOT SDL2_FOUND AND NOT USE_INTERNAL_SDL )
+    if( NOT SDL2_FOUND AND NOT USE_INTERNAL_SDL )
       find_package( SDL2 )
     endif()
     include_directories( ${SDL2_INCLUDE_DIRS} )
@@ -1374,15 +1374,14 @@ macro( find_and_use_SDL TARGET )
   endif()
   # Fall back on 1.2
   if( NOT USE_SDL2 OR NOT SDL2_FOUND )
-    if( NOT SDL_FOUND AND NOT SDL2_FOUND AND NOT USE_INTERNAL_SDL )
+    if( NOT SDL_FOUND AND NOT USE_INTERNAL_SDL )
       find_package( SDL REQUIRED )
+      set( SDL_FOUND "1" CACHE INTERNAL "" )
     endif()
     include_directories( ${SDL_INCLUDE_DIR} )
     target_link_libraries( ${TARGET} ${SDL_LIBRARY} )
   endif()
-  if( SDL2_FOUND OR SDL_LIBRARY )
-    set( SDL_FOUND "1" CACHE INTERNAL "" )
-  else()
+  if( NOT SDL2_FOUND AND NOT SDL_LIBRARY)
     # shouldn't get here – should fail above if 1.2 isn't found
     message( FATAL_ERROR "Neither SDL 1.2 nor SDL 2 were found" )
   endif()
