Move Opus from client to it's own CMake target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1561,7 +1561,7 @@ if( BUILD_OLD_RENDERER )
   find_package( Freetype REQUIRED )
   find_package( GLEW REQUIRED )
   find_package( WebP REQUIRED )
-  
+
   if( UNIX )
     find_package( X11 )
   endif()
@@ -1657,7 +1657,7 @@ endfunction()
 if( BUILD_CLIENT )
   # Setup target client
   add_executable( client ${SERVERLIST} ${CLIENTLIST} ${SDLBASELIST} ${SDLLIST} ${QCOMMONLIST} ${SHAREDLIST} ${CRYPTOLIST} ${TINYGETTEXT_LIST}
-    ${DATABASELIST} ${MOUNT_DIR}/engine/qcommon/dl_main_curl.c ${SPEEXLIST} ${OPUSLIST} ${WIN_RC} )
+    ${DATABASELIST} ${MOUNT_DIR}/engine/qcommon/dl_main_curl.c ${SPEEXLIST} ${WIN_RC} )
   add_dependencies( client rendererGL )
   include_directories( ${NEWTON_INCLUDES} )
   target_link_libraries( client ${OS_LIBRARIES} ${NEWTON_LIBRARY} )
@@ -1750,13 +1750,16 @@ if( BUILD_CLIENT )
   endif()
 
   if( USE_INTERNAL_OPUS )
+      add_library( INTERNAL_OPUS STATIC ${OPUSLIST} )
       if( NOT MSVC )
-        set_property( TARGET client APPEND PROPERTY COMPILE_DEFINITIONS USE_ALLOCA FLOATING_POINT OPUS_BUILD )
+        set_property( TARGET INTERNAL_OPUS APPEND PROPERTY COMPILE_DEFINITIONS USE_ALLOCA FLOATING_POINT OPUS_BUILD )
       else()
-        set_property( TARGET client APPEND PROPERTY COMPILE_DEFINITIONS HAVE_CONFIG_H )
+        set_property( TARGET INTERNAL_OPUS APPEND PROPERTY COMPILE_DEFINITIONS HAVE_CONFIG_H )
         include_directories( ${LIB_DIR}/opus-1.0.2/include/win32 )
       endif()
       include_directories( ${LIB_DIR}/opusfile-0.2/include ${LIB_DIR}/opus-1.0.2/include ${LIB_DIR}/opus-1.0.2/celt ${LIB_DIR}/opus-1.0.2/silk ${LIB_DIR}/opus-1.0.2/silk/float )
+      set( OPUS_LIBRARIES INTERNAL_OPUS CACHE STRING "Opus Libraries" FORCE )
+      target_link_libraries( client ${OPUS_LIBRARIES} )
   else()
       find_package( Opus REQUIRED )
       include_directories( ${OPUS_INCLUDE_DIRS} )
