Correct a default configuration problem.

--- a/debian/config/server.cfg
+++ b/debian/config/server.cfg
@@ -10,7 +10,7 @@ set g_needpass 0
 
 //loading screen
 set sv_hostname "Unvanquished Alpha Server"
-set g_motd "http://unvanquished.net/"
+set g_motd "http:/\/unvanquished.net/"
 
 //disallow downloads from the server
 set sv_allowdownload 0
