--- a/debian/rules
+++ b/debian/rules
@@ -25,6 +25,7 @@ override_dh_auto_configure:
 		 -DGAME_QVM=OFF \
 		 -DUSE_OPENAL_DLOPEN=OFF \
 		 -DUSE_GLSL_OPTIMIZER=OFF \
+		 -DBUILD_DAEMONMAP=ON \
 		 $(shell test -f /usr/include/xvid.h || echo -DUSE_CIN_XVID=OFF) \
 		 $(shell test -d /usr/include/webp || echo -DUSE_WEBP=OFF)
 
