CmakeList: fix typos

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -903,11 +903,11 @@ endif()
 
 # Native client
 if( APPLE )
-  add_definitions( -DNACL_WINDOWS=0 -DNACL_LINUX=0 -DNACL_ANDRIOD=0 -DNACL_OSX=1 )
+  add_definitions( -DNACL_WINDOWS=0 -DNACL_LINUX=0 -DNACL_ANDROID=0 -DNACL_OSX=1 )
 elseif( LINUX )
-  add_definitions( -DNACL_WINDOWS=0 -DNACL_LINUX=1 -DNACL_ANDRIOD=0 -DNACL_OSX=0 )
+  add_definitions( -DNACL_WINDOWS=0 -DNACL_LINUX=1 -DNACL_ANDROID=0 -DNACL_OSX=0 )
 elseif( WIN32 )
-  add_definitions( -DNACL_WINDOWS=1 -DNACL_LINUX=0 -DNACL_ANDRIOD=0 -DNACL_OSX=0 )
+  add_definitions( -DNACL_WINDOWS=1 -DNACL_LINUX=0 -DNACL_ANDROID=0 -DNACL_OSX=0 )
 endif()
 if( ARCH STREQUAL "x86" OR ARCH STREQUAL "x86_64" )
   add_definitions( -DNACL_BUILD_ARCH=x86 )
