Add support for icons for buildings & classes.

--- a/main/configs/buildables/acid_tube.attr.cfg
+++ b/main/configs/buildables/acid_tube.attr.cfg
@@ -2,6 +2,7 @@
 humanName         "Acid Tube"
 description       "Ejects lethal poisonous acid at an approaching human. These are highly effective when used in conjunction with a trapper to hold the victim in place."
 team              aliens
+icon              "icons/iconb_acid_tube"
 
 // Generic limits
 unlockThreshold   0
