--- a/main/configs/buildables/barricade.attr.cfg
+++ b/main/configs/buildables/barricade.attr.cfg
@@ -2,6 +2,7 @@
 humanName         "Barricade"
 description       "Used to obstruct corridors and doorways, hindering humans from threatening the spawns and Overmind. Barricades will shrink to allow aliens to pass over them, however."
 team              aliens
+icon              "icons/iconb_barricade"
 
 // Generic limits
 unlockThreshold   0
