--- a/main/configs/buildables/booster.attr.cfg
+++ b/main/configs/buildables/booster.attr.cfg
@@ -2,6 +2,7 @@
 humanName         "Booster"
 description       "Laces the attacks of any alien that touches it with a poison that will gradually deal damage to any humans exposed to it. The booster also increases the rate of health regeneration for any nearby aliens."
 team              aliens
+icon              "icons/iconb_booster"
 
 // Generic limits
 unlockThreshold   100
