--- a/main/configs/buildables/dcc.attr.cfg
+++ b/main/configs/buildables/dcc.attr.cfg
@@ -2,6 +2,7 @@
 humanName         "Defence Computer"
 description       "A structure that enables self-repair functionality in human structures. Each Defence Computer built increases repair rate slightly."
 team              humans
+icon              "icons/iconb_dcc"
 
 // Generic limits
 unlockThreshold   100
