--- a/main/configs/buildables/mgturret.attr.cfg
+++ b/main/configs/buildables/mgturret.attr.cfg
@@ -2,6 +2,7 @@
 humanName         "Machinegun Turret"
 description       "Automated base defense that is effective against large targets but slow to begin firing. Should always be backed up by physical support."
 team              humans
+icon              "icons/iconb_mgturret"
 
 // Generic limits
 unlockThreshold   0
