--- a/main/configs/buildables/reactor.attr.cfg
+++ b/main/configs/buildables/reactor.attr.cfg
@@ -2,6 +2,7 @@
 humanName         "Reactor"
 description       "Provides power to all friendly structures on the battlefield. A repeater can be used to concentrate power in one area. Only one reactor can be built at a time."
 team              humans
+icon              "icons/iconb_reactor"
 
 // Generic limits
 unlockThreshold   0
