--- a/main/configs/buildables/repeater.attr.cfg
+++ b/main/configs/buildables/repeater.attr.cfg
@@ -2,6 +2,7 @@
 humanName         "Repeater"
 description       "Increases the power capacity of an area, so that more buildables can be built there. Deals severe damage to close structures if it explodes."
 team              humans
+icon              "icons/iconb_repeater"
 
 // Generic limits
 unlockThreshold   0
