--- a/main/configs/buildables/telenode.attr.cfg
+++ b/main/configs/buildables/telenode.attr.cfg
@@ -2,6 +2,7 @@
 humanName         "Telenode"
 description       "The most basic human structure. It provides a means for humans to enter the battle arena. Without any of these the humans cannot spawn and defeat is imminent."
 team              humans
+icon              "icons/iconb_telenode"
 
 // Generic limits
 unlockThreshold   0
