--- a/pkg/unvanquished_src.dpkdir/configs/buildables/arm.attr.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/buildables/arm.attr.cfg
@@ -2,6 +2,7 @@
 humanName         "Armoury"
 description       "An essential part of the human base, providing a means to upgrade the basic human equipment. A range of upgrades and weapons are available for sale from the armoury."
 team humans
+icon              "icons/iconb_arm"
 
 // Generic limits
 unlockThreshold   0
