--- a/pkg/unvanquished_src.dpkdir/configs/buildables/drill.attr.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/buildables/drill.attr.cfg
@@ -2,6 +2,7 @@
 humanName         "Drill"
 description       "A structure that drills for resources"
 team              humans
+icon              "icons/iconb_drill"
 
 // Generic limits
 unlockThreshold   0
