--- a/pkg/unvanquished_src.dpkdir/configs/buildables/eggpod.attr.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/buildables/eggpod.attr.cfg
@@ -2,6 +2,7 @@
 humanName         "Egg"
 description       "The most basic alien structure. It allows aliens to spawn and protect the Overmind. Without any of these, the Overmind is left nearly defenseless and defeat is imminent."
 team              aliens
+icon              "icons/iconb_eggpod"
 
 // Generic limits
 unlockThreshold   0
