--- a/pkg/unvanquished_src.dpkdir/configs/buildables/leech.attr.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/buildables/leech.attr.cfg
@@ -2,6 +2,7 @@
 humanName         "Leech"
 description       "Leeches minerals and nutrients from the ground"
 team              aliens
+icon              "icons/iconb_leech"
 
 // Generic limits
 unlockThreshold   0
