--- a/pkg/unvanquished_src.dpkdir/configs/buildables/medistat.attr.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/buildables/medistat.attr.cfg
@@ -2,6 +2,7 @@
 humanName         "Medistation"
 description       "A structure that automatically restores the health and stamina of any human that stands on it. It may only be used by one person at a time. This structure also issues medkits."
 team              humans
+icon              "icons/iconb_medistat"
 
 // Generic limits
 unlockThreshold   0
