--- a/pkg/unvanquished_src.dpkdir/configs/buildables/overmind.attr.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/buildables/overmind.attr.cfg
@@ -2,6 +2,7 @@
 humanName         "Overmind"
 description       "A collective consciousness that controls all the alien structures in its vicinity. It must be protected at all costs, since its death will render alien structures defenseless."
 team              aliens
+icon              "icons/iconb_overmind"
 
 // Generic limits
 unlockThreshold   0
