--- a/pkg/unvanquished_src.dpkdir/configs/buildables/tesla.attr.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/buildables/tesla.attr.cfg
@@ -2,6 +2,7 @@
 humanName         "Tesla Generator"
 description       "A structure equipped with a strong electrical attack that fires instantly and always hits its target. It is effective against smaller aliens and for consolidating basic defense."
 team              humans
+icon              "icons/iconb_tesla"
 
 // Generic limits
 unlockThreshold   200
