--- a/pkg/unvanquished_src.dpkdir/configs/buildables/trapper.attr.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/buildables/trapper.attr.cfg
@@ -2,6 +2,7 @@
 humanName         "Trapper"
 description       "Fires a blob of adhesive spit at any non-alien in its line of sight. This hinders their movement, making them an easy target for other defensive structures or aliens."
 team              aliens
+icon              "icons/iconb_trapper"
 
 // Generic limits
 unlockThreshold   100
