--- a/debian/control
+++ b/debian/control
@@ -64,7 +64,7 @@ Description: Team-based FPS game, aliens v. humans - dev tools
 Package: unvanquished-common
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, curl
-Conflicts: unvanquished (<< 0.4.0)
+Conflicts: unvanquished (<= 0.20.0-3)
 Replaces: unvanquished (<< 0.4.0)
 Description: Team-based FPS game, aliens v. humans - shared resources
  Build a base, defend it against the other team, gain credits for better
