unvanquished-common: ask whether to download .pk3s and from where

--- a/download-pk3.sh.in
+++ b/download-pk3.sh.in
@@ -92,8 +92,10 @@ CACHE="${2:-${DEST_DIR}}"
 # NOTE THAT THIS INDISCRIMINATELY REMOVES *.tmp FROM DEST & CACHE DIRS
 cleanup ()
 {
-  test "$?" = 0 || echo '[1;31mFAILED.[m'
+  RET="$?"
+  test "$RET" = 0 || echo '[1;31mFAILED.[m'
   rm -f -- "$CACHE/"*.tmp "$DEST_DIR/"*.tmp
+  return "$RET"
 }
 trap cleanup EXIT
 
